src/plugins/platforms/winrt/qwinrtscreen.h
@@ -78,6 +78,8 @@ namespace ABI {
         namespace Graphics {
             namespace Display {
                 struct IDisplayPropertiesStatics;
+                struct IDisplayInformationStatics;
+                struct IDisplayInformation;
             }
         }
 #ifdef Q_OS_WINPHONE
@@ -109,6 +111,9 @@ public:
     int depth() const;
     QImage::Format format() const;
     QSurfaceFormat surfaceFormat() const;
+    QSizeF physicalSize() const Q_DECL_OVERRIDE;
+    QDpi logicalDpi() const Q_DECL_OVERRIDE;
+    qreal devicePixelRatio() const Q_DECL_OVERRIDE;
     QWinRTInputContext *inputContext() const;
     QPlatformCursor *cursor() const;
     Qt::KeyboardModifiers keyboardModifiers() const;
@@ -150,7 +155,13 @@ private:
     HRESULT onVisibilityChanged(ABI::Windows::UI::Core::ICoreWindow *, ABI::Windows::UI::Core::IVisibilityChangedEventArgs *args);
     HRESULT onAutomationProviderRequested(ABI::Windows::UI::Core::ICoreWindow *, ABI::Windows::UI::Core::IAutomationProviderRequestedEventArgs *args);
 
+#if _MSC_VER<=1700
     HRESULT onOrientationChanged(IInspectable *);
+    HRESULT onDpiChanged(IInspectable *);
+#else
+    HRESULT onOrientationChanged(ABI::Windows::Graphics::Display::IDisplayInformation *, IInspectable *);
+    HRESULT onDpiChanged(ABI::Windows::Graphics::Display::IDisplayInformation *, IInspectable *);
+#endif
 
 #ifdef Q_OS_WINPHONE
     HRESULT onBackButtonPressed(IInspectable *, ABI::Windows::Phone::UI::Input::IBackPressedEventArgs *args);
@@ -160,9 +171,10 @@ private:
     ABI::Windows::UI::ViewManagement::IApplicationViewStatics *m_applicationView;
     ABI::Windows::ApplicationModel::Core::ICoreApplication *m_application;
 
-    QRect m_geometry;
+    QRectF m_geometry;
     QImage::Format m_format;
     QSurfaceFormat m_surfaceFormat;
+    qreal m_dpi;
     int m_depth;
     QWinRTInputContext *m_inputContext;
     QWinRTCursor *m_cursor;
@@ -171,7 +183,13 @@ private:
     EGLDisplay m_eglDisplay;
     EGLSurface m_eglSurface;
 
-    ABI::Windows::Graphics::Display::IDisplayPropertiesStatics *m_displayProperties;
+#if _MSC_VER<=1700
+    ABI::Windows::Graphics::Display::IDisplayPropertiesStatics *m_displayInformation;
+#else
+    ABI::Windows::Graphics::Display::IDisplayInformationStatics *m_displayInformationFactory;
+    ABI::Windows::Graphics::Display::IDisplayInformation *m_displayInformation;
+#endif
+    qreal m_devicePixelRatio;
     Qt::ScreenOrientation m_nativeOrientation;
     Qt::ScreenOrientation m_orientation;
 
